--- a/gui.ini
+++ b/gui.ini
@@ -22,7 +22,7 @@ text=Show X Grid
 checked=false
 
 [n_meas_laser_spectra_end]
-text="1,000"
+text="0,00"
 value=1300
 
 [autoPercentSpin]
@@ -92,8 +92,8 @@ value=1400
 text=1
 
 [scan1D_step]
-text="0,200"
-value=0.2
+text="2,000"
+value=2
 
 [laserWavelength]
 text=1064
@@ -111,7 +111,7 @@ checked=false
 text=./data/scan
 
 [pm100Average]
-text="1,000"
+text=100
 value=100
 
 [clipToViewCheck]
@@ -119,7 +119,7 @@ text=Clip to View
 checked=false
 
 [n_meas_laser_spectra_Z_start]
-text="1,000"
+text="0,00"
 value=0
 
 [scanPolar_angle]
@@ -127,15 +127,15 @@ text="360,00"
 value=360
 
 [fastScan_time_calibr]
-text="4,4824474692"
-value=4.4824474692
+text="2,0000000000"
+value=2
 
 [autoAlphaCheck]
 text=Auto
 checked=false
 
 [normXBlurSpin]
-text="1,000"
+text="0,00"
 value=0
 
 [Pi_X_move_to]
@@ -143,11 +143,11 @@ text="50,000"
 value=50
 
 [calibr_end]
-text="360,00"
+text="0,00"
 value=360
 
 [rotPiezoStage_Step]
-text="1,000"
+text="0,00"
 value=10
 
 [rotPiezoStage_wait]
@@ -163,7 +163,7 @@ text="10000,00"
 value=10000
 
 [calibr_wavelength_start]
-text=850
+text="0,00"
 value=850
 
 [usbSpectr_save_to]
@@ -205,7 +205,7 @@ text=2
 value=2
 
 [DAQmx_shift]
-text="1,000"
+text="0,00"
 value=12
 
 [pico_ChB_offset]
@@ -222,7 +222,7 @@ checked=false
 
 [pico_AutoRange]
 text=Auto Level:
-checked=true
+checked=false
 
 [raw_data_preview]
 text=preview
@@ -241,20 +241,20 @@ text="0,0000"
 value=0
 
 [calibr_wavelength_step]
-text=1
+text="0,00"
 value=1
 
 [confParam_scan_step]
-text="0,100"
+text="0,00"
 value=0.1
 
 [n_meas_laser_spectra_Z_step]
-text="0,30"
+text="0,00"
 value=0.3
 
 [scan1D_start]
-text="15,00"
-value=15
+text="0,00"
+value=0
 
 [HWP_stepper_wait]
 text=WaitUntilReady
@@ -265,18 +265,18 @@ text=X
 checked=true
 
 [n_meas_laser_spectra_step]
-text="1,000"
+text="0,00"
 value=1
 
 [andorCameraExposure]
-text="20,00000"
-value=20
+text="0,50000"
+value=0.5
 
 [pico_pretrig]
 text=0.0
 
 [calibr_step]
-text="1,000"
+text="0,00"
 value=1
 
 [pico_photon_counter]
@@ -284,11 +284,11 @@ text=PC
 checked=false
 
 [n_meas_laser_spectra_Z_offset]
-text="1,000"
+text="0,00"
 value=0
 
 [pico_samplingDuration]
-text=30e-9
+text=100e-6
 
 [n_meas_laser_spectra_track]
 text=track
@@ -318,19 +318,19 @@ value=850
 text=-0.01
 
 [scan1D_end]
-text="50,00"
-value=50
+text="360,00"
+value=360
 
 [calibr_start]
 text="0,00"
 value=0
 
 [n_meas_laser_spectra_Z_interface]
-text="1,000"
+text="0,0000"
 value=0
 
 [usbSpectr_to]
-text="1,000"
+text=1600
 value=1600
 
 [normROICheck]
@@ -374,11 +374,11 @@ text=Shutter
 checked=false
 
 [usbSpectr_integr_time]
-text="1,000"
+text="0,00"
 value=0.01
 
 [n_meas_laser_spectra_start]
-text="1,000"
+text="0,00"
 value=850
 
 [shamrockWavelength]
@@ -389,24 +389,24 @@ text=-20000
 value=-20000
 
 [scan3D_num_peaks]
-text=1
-value=1
+text=2
+value=2
 
 [HWP_rel_step]
 text="5,00"
 value=5
 
 [pico_n_captures]
-text=5000
-value=5000
+text=1
+value=1
 
 [Pi_wait]
 text=Wait
 checked=true
 
 [laserPower_internal]
-text="2,50"
-value=2.5
+text="0,00"
+value=0
 
 [andorCameraLive]
 text=Live
