--- a/gui.ini
+++ b/gui.ini
@@ -22,8 +22,8 @@ text=Show X Grid
 checked=false
 
 [n_meas_laser_spectra_end]
-text="0,00"
-value=1300
+text=1064
+value=1064
 
 [autoPercentSpin]
 text=100%
@@ -85,19 +85,19 @@ text=Time range
 checked=false
 
 [usbSpectr_from]
-text=1400
+text="0,00"
 value=1400
 
 [maxText]
 text=1
 
 [scan1D_step]
-text="2,000"
-value=2
+text="0,200"
+value=0.2
 
 [laserWavelength]
-text=1064
-value=1064
+text=1025
+value=1025
 
 [usbSpectr_save_from]
 text=0
@@ -119,16 +119,16 @@ text=Clip to View
 checked=false
 
 [n_meas_laser_spectra_Z_start]
-text="0,00"
-value=0
+text="5,00"
+value=5
 
 [scanPolar_angle]
 text="360,00"
 value=360
 
 [fastScan_time_calibr]
-text="2,0000000000"
-value=2
+text="4,7177105371"
+value=4.7177105371
 
 [autoAlphaCheck]
 text=Auto
@@ -143,11 +143,11 @@ text="50,000"
 value=50
 
 [calibr_end]
-text="0,00"
+text="360,00"
 value=360
 
 [rotPiezoStage_Step]
-text="0,00"
+text="10,00"
 value=10
 
 [rotPiezoStage_wait]
@@ -163,11 +163,11 @@ text="10000,00"
 value=10000
 
 [calibr_wavelength_start]
-text="0,00"
+text=850
 value=850
 
 [usbSpectr_save_to]
-text=3648
+text="0,00"
 value=3648
 
 [fastScan_time_delay]
@@ -205,7 +205,7 @@ text=2
 value=2
 
 [DAQmx_shift]
-text="0,00"
+text=12
 value=12
 
 [pico_ChB_offset]
@@ -241,20 +241,20 @@ text="0,0000"
 value=0
 
 [calibr_wavelength_step]
-text="0,00"
+text=1
 value=1
 
 [confParam_scan_step]
-text="0,00"
+text="0,100"
 value=0.1
 
 [n_meas_laser_spectra_Z_step]
-text="0,00"
-value=0.3
+text="0,20"
+value=0.2
 
 [scan1D_start]
-text="0,00"
-value=0
+text="15,00"
+value=15
 
 [HWP_stepper_wait]
 text=WaitUntilReady
@@ -265,18 +265,18 @@ text=X
 checked=true
 
 [n_meas_laser_spectra_step]
-text="0,00"
-value=1
+text=5
+value=5
 
 [andorCameraExposure]
-text="0,50000"
-value=0.5
+text="0,10000"
+value=0.1
 
 [pico_pretrig]
 text=0.0
 
 [calibr_step]
-text="0,00"
+text="1,000"
 value=1
 
 [pico_photon_counter]
@@ -284,15 +284,15 @@ text=PC
 checked=false
 
 [n_meas_laser_spectra_Z_offset]
-text="0,00"
-value=0
+text="-0,10"
+value=-0.1
 
 [pico_samplingDuration]
 text=100e-6
 
 [n_meas_laser_spectra_track]
 text=track
-checked=false
+checked=true
 
 [laserWavelength_ready]
 text=ready
@@ -318,16 +318,16 @@ value=850
 text=-0.01
 
 [scan1D_end]
-text="360,00"
-value=360
+text="45,00"
+value=45
 
 [calibr_start]
 text="0,00"
 value=0
 
 [n_meas_laser_spectra_Z_interface]
-text="0,0000"
-value=0
+text="25,9328"
+value=25.9328
 
 [usbSpectr_to]
 text=1600
@@ -342,8 +342,8 @@ text="0,00"
 value=0
 
 [Pi_Z_move_to]
-text="29,000"
-value=29
+text="26,000"
+value=26
 
 [meas_laser_spectra_step]
 text=1
@@ -366,23 +366,23 @@ text="0,020"
 value=0.02
 
 [shamrockWavelength_to_set]
-text="355,00"
-value=355
+text="318,00"
+value=318
 
 [laserShutter]
 text=Shutter
 checked=false
 
 [usbSpectr_integr_time]
-text="0,00"
+text="0,010"
 value=0.01
 
 [n_meas_laser_spectra_start]
-text="0,00"
-value=850
+text=950
+value=950
 
 [shamrockWavelength]
-text=355.0
+text=341.66668701171875
 
 [pico_AutoRange_max]
 text=-20000
@@ -405,8 +405,8 @@ text=Wait
 checked=true
 
 [laserPower_internal]
-text="0,00"
-value=0
+text="2,52"
+value=2.52
 
 [andorCameraLive]
 text=Live
@@ -426,8 +426,12 @@ checked=true
 
 [n_meas_laser_spectra_track_fast]
 text=Fast
-checked=true
+checked=false
 
 [laserWavelength_to_set]
-text=1064
-value=1064
+text=1025
+value=1025
+
+[n_meas_laser_spectra_Z_interface_fit]
+text=fit
+checked=true
