--- a/gui.ini
+++ b/gui.ini
@@ -3,7 +3,7 @@ text=255
 value=255
 
 [qt_spinbox_lineedit]
-text="0,00"
+text=1300
 
 [autoPointsCheck]
 text=Auto
@@ -22,11 +22,11 @@ text=Show X Grid
 checked=false
 
 [n_meas_laser_spectra_end]
-text=1064
+text=1300
 value=1064
 
 [autoPercentSpin]
-text=100%
+text=1300
 value=100
 
 [mouseCheck]
@@ -65,7 +65,7 @@ text=Log X
 checked=false
 
 [Pi_Y_move_to]
-text="50,000"
+text=1300
 value=50
 
 [visibleOnlyCheck]
@@ -85,22 +85,22 @@ text=Time range
 checked=false
 
 [usbSpectr_from]
-text="0,00"
+text=1400
 value=1400
 
 [maxText]
 text=1
 
 [scan1D_step]
-text="0,200"
+text=1300
 value=0.2
 
 [laserWavelength]
-text=1025
-value=1025
+text=1064
+value=1064
 
 [usbSpectr_save_from]
-text=0
+text=1300
 value=0
 
 [logYCheck]
@@ -127,8 +127,8 @@ text="360,00"
 value=360
 
 [fastScan_time_calibr]
-text="4,7177105371"
-value=4.7177105371
+text=1300
+value=2
 
 [autoAlphaCheck]
 text=Auto
@@ -143,11 +143,11 @@ text="50,000"
 value=50
 
 [calibr_end]
-text="360,00"
+text=1300
 value=360
 
 [rotPiezoStage_Step]
-text="10,00"
+text=1300
 value=10
 
 [rotPiezoStage_wait]
@@ -163,11 +163,11 @@ text="10000,00"
 value=10000
 
 [calibr_wavelength_start]
-text=850
+text=1300
 value=850
 
 [usbSpectr_save_to]
-text="0,00"
+text=1300
 value=3648
 
 [fastScan_time_delay]
@@ -201,11 +201,11 @@ text=track
 checked=false
 
 [Scan3D_min_distance]
-text=2
+text=1300
 value=2
 
 [DAQmx_shift]
-text=12
+text=1300
 value=12
 
 [pico_ChB_offset]
@@ -222,14 +222,14 @@ checked=false
 
 [pico_AutoRange]
 text=Auto Level:
-checked=false
+checked=true
 
 [raw_data_preview]
 text=preview
 checked=true
 
 [scan3D_threshold_rel]
-text="0,50"
+text=1300
 value=0.5
 
 [autoDownsampleCheck]
@@ -241,7 +241,7 @@ text="0,0000"
 value=0
 
 [calibr_wavelength_step]
-text=1
+text=1300
 value=1
 
 [confParam_scan_step]
@@ -249,12 +249,12 @@ text="0,100"
 value=0.1
 
 [n_meas_laser_spectra_Z_step]
-text="0,20"
+text=1300
 value=0.2
 
 [scan1D_start]
-text="15,00"
-value=15
+text=1300
+value=0
 
 [HWP_stepper_wait]
 text=WaitUntilReady
@@ -276,7 +276,7 @@ value=0.1
 text=0.0
 
 [calibr_step]
-text="1,000"
+text=1300
 value=1
 
 [pico_photon_counter]
@@ -303,7 +303,7 @@ text=Live
 checked=false
 
 [confParam_scan_end]
-text="50,00"
+text=1300
 value=50
 
 [normTBlurSpin]
@@ -311,26 +311,26 @@ text="0,00"
 value=0
 
 [meas_laser_spectra_start]
-text=850
+text=1300
 value=850
 
 [pico_photon_counter_threshold]
 text=-0.01
 
 [scan1D_end]
-text="45,00"
-value=45
+text="50,00"
+value=50
 
 [calibr_start]
 text="0,00"
 value=0
 
 [n_meas_laser_spectra_Z_interface]
-text="25,9328"
+text=1300
 value=25.9328
 
 [usbSpectr_to]
-text=1600
+text=1300
 value=1600
 
 [normROICheck]
@@ -342,8 +342,8 @@ text="0,00"
 value=0
 
 [Pi_Z_move_to]
-text="26,000"
-value=26
+text=1300
+value=25
 
 [meas_laser_spectra_step]
 text=1
@@ -358,16 +358,16 @@ text=Fast
 checked=false
 
 [n_meas_laser_spectra_Z_end]
-text="50,00"
+text=1300
 value=50
 
 [pico_TrigThreshold]
-text="0,020"
+text=1300
 value=0.02
 
 [shamrockWavelength_to_set]
-text="318,00"
-value=318
+text=1300
+value=355
 
 [laserShutter]
 text=Shutter
@@ -378,18 +378,18 @@ text="0,010"
 value=0.01
 
 [n_meas_laser_spectra_start]
-text=950
+text=1300
 value=950
 
 [shamrockWavelength]
-text=341.66668701171875
+text=355.0
 
 [pico_AutoRange_max]
-text=-20000
+text=1300
 value=-20000
 
 [scan3D_num_peaks]
-text=2
+text=1300
 value=2
 
 [HWP_rel_step]
@@ -405,8 +405,8 @@ text=Wait
 checked=true
 
 [laserPower_internal]
-text="2,52"
-value=2.52
+text="0,00"
+value=0
 
 [andorCameraLive]
 text=Live
@@ -429,9 +429,37 @@ text=Fast
 checked=false
 
 [laserWavelength_to_set]
-text=1025
-value=1025
+text=1300
+value=1064
 
 [n_meas_laser_spectra_Z_interface_fit]
 text=fit
 checked=true
+
+[n_meas_laser_spectra_Z_interface_optim]
+text=Z optim.
+checked=true
+
+[n_meas_laser_spectra_grid_x]
+text=1
+value=1
+
+[n_meas_laser_spectra_grid]
+text=gridScan
+checked=false
+
+[n_meas_laser_spectra_grid_y]
+text=1
+value=1
+
+[mocoMoveAbs_target]
+text=0
+value=0
+
+[spinBox]
+text=1300
+value=0
+
+[mocoPosition]
+text=0
+value=0
