--- a/gui.ini
+++ b/gui.ini
@@ -1,465 +1,524 @@
 [General]
+HWP_stepper_angle=-9.977578475336323
 text=255
 value=255
 
-[qt_spinbox_lineedit]
-text=1300
-
-[autoPointsCheck]
-text=Auto
-checked=true
-
-[fftCheck]
-text=Power Spectrum (FFT)
-checked=false
-
-[confParam_scan_start]
+[DAQmx_shift]
 text="0,00"
+value=12
+
+[HWP_move_to_angle]
+text="0,0000"
 value=0
 
-[xGridCheck]
-text=Show X Grid
-checked=false
-
-[n_meas_laser_spectra_end]
-text=1300
-value=1064
-
-[autoPercentSpin]
-text=1300
-value=100
-
-[mouseCheck]
-text=Mouse Enabled
-checked=true
-
-[invertCheck]
-text=Invert Axis
-checked=false
-
-[autoPanCheck]
-text=Auto Pan Only
-checked=false
-
-[maxTracesCheck]
-text=Max Traces:
-checked=false
-
-[start3DScan_center]
-text=center
-checked=true
-
-[downsampleCheck]
-text=Downsample
-checked=false
-
-[forgetTracesCheck]
-text=Forget hidden traces
-checked=false
-
-[minText]
-text=27.054
-
-[logXCheck]
-text=Log X
-checked=false
-
-[Pi_Y_move_to]
-text=1300
-value=50
-
-[visibleOnlyCheck]
-text=Visible Data Only
-checked=false
-
-[maxTracesSpin]
-text=0
-value=0
-
-[downsampleSpin]
-text=1x
-value=1
-
-[normTimeRangeCheck]
-text=Time range
-checked=false
-
-[usbSpectr_from]
-text=1400
-value=1400
-
-[maxText]
-text=1
-
-[scan1D_step]
-text=1300
-value=0.2
-
-[laserWavelength]
-text=1064
-value=1064
-
-[usbSpectr_save_from]
-text=1300
-value=0
-
-[logYCheck]
-text=Log Y
-checked=false
-
-[scan3D_path]
-text=./data/scan
-
-[pm100Average]
-text=100
-value=100
-
-[clipToViewCheck]
-text=Clip to View
-checked=false
-
-[n_meas_laser_spectra_Z_start]
-text="5,00"
+[HWP_rel_step]
+text="0,00"
 value=5
 
-[scanPolar_angle]
-text="360,00"
-value=360
-
-[fastScan_time_calibr]
-text=1300
-value=2
-
-[autoAlphaCheck]
-text=Auto
-checked=false
-
-[normXBlurSpin]
+[HWP_stepper_MoveTo]
 text="0,00"
 value=0
+
+[HWP_stepper_step]
+text="0,00"
+value=10
+
+[HWP_stepper_wait]
+checked=true
+text=&WaitUntilReady
+
+[Pi_Velocity]
+text="0,00"
+value=10000
+
+[Pi_X_On]
+checked=true
+text=&X
 
 [Pi_X_move_to]
 text="50,000"
 value=50
 
+[Pi_Y_On]
+checked=true
+text=&Y
+
+[Pi_Y_move_to]
+text="50,000"
+value=50
+
+[Pi_Z_On]
+checked=true
+text=&Z
+
+[Pi_Z_move_to]
+text="0,00"
+value=25
+
+[Pi_wait]
+checked=true
+text=&Wait
+
+[Scan3D_min_distance]
+text=2
+value=2
+
+[andorCameraExposure]
+text="0,00"
+value=0.1
+
+[andorCameraLive]
+checked=false
+text=&Live
+
+[andorCameraReadoutMode]
+currentIndex=0
+
+[autoAlphaCheck]
+checked=false
+text=Auto
+
+[autoDownsampleCheck]
+checked=true
+text=Auto
+
+[autoPanCheck]
+checked=false
+text=Auto Pan Only
+
+[autoPercentSpin]
+text=100%
+value=100
+
+[autoPointsCheck]
+checked=true
+text=Auto
+
 [calibr_end]
-text=1300
+text="0,00"
 value=360
 
-[rotPiezoStage_Step]
-text=1300
-value=10
-
-[rotPiezoStage_wait]
-text=WaitUntilReady
-checked=false
-
-[yGridCheck]
-text=Show Y Grid
-checked=false
-
-[Pi_Velocity]
-text="10000,00"
-value=10000
-
-[calibr_wavelength_start]
-text=1300
-value=850
-
-[usbSpectr_save_to]
-text=1300
-value=3648
-
-[fastScan_time_delay]
-text="0,0000000000"
+[calibr_start]
+text="0,00"
 value=0
 
-[pico_sampleInterval]
-text=2e-9
+[calibr_step]
+text="1,000"
+value=1
 
-[Pi_Y_On]
-text=Y
-checked=true
-
-[normYBlurSpin]
+[calibr_wavelength_end]
 text="0,00"
+value=1300
+
+[calibr_wavelength_start]
+text="0,00"
+value=850
+
+[calibr_wavelength_step]
+text="0,00"
+value=1
+
+[clipToViewCheck]
+checked=false
+text=Clip to View
+
+[confParam_scan_end]
+text="50,00"
+value=50
+
+[confParam_scan_start]
+text="0,00"
+value=0
+
+[confParam_scan_step]
+text="0,100"
+value=0.1
+
+[downsampleCheck]
+checked=false
+text=Downsample
+
+[downsampleSpin]
+text="0,00"
+value=1
+
+[fastScan_pattern]
+currentIndex=0
+
+[fastScan_time_calibr]
+text="2,0000000000"
+value=2
+
+[fastScan_time_cutoff]
+text="0,00"
+value=0
+
+[fastScan_time_delay]
+text="0,00"
+value=0
+
+[fftCheck]
+checked=false
+text=Power Spectrum (FFT)
+
+[forgetTracesCheck]
+checked=false
+text=Forget hidden traces
+
+[invertCheck]
+checked=false
+text=Invert Axis
+
+[laserPower_internal]
+text="0,00"
+value=0
+
+[laserShutter]
+checked=true
+text=S&hutter
+
+[laserWavelength]
+text=1064
+value=1064
+
+[laserWavelength_ready]
+checked=false
+text=read&y
+
+[laserWavelength_to_set]
+text="0,00"
+value=1064
+
+[linkCombo]
+currentIndex=0
+
+[logXCheck]
+checked=false
+text=Log X
+
+[logYCheck]
+checked=false
+text=Log Y
+
+[maxText]
+text=1
+
+[maxTracesCheck]
+checked=false
+text=Max Traces:
+
+[maxTracesSpin]
+text=0
 value=0
 
 [meas_laser_spectra_end]
 text=1300
 value=1300
 
-[scan1D_filePath]
-text=./data/scan1D
-
-[pico_AutoRange_min]
-text=-200
-value=-200
-
-[meas_laser_spectra_track]
-text=track
-checked=false
-
-[Scan3D_min_distance]
-text=1300
-value=2
-
-[DAQmx_shift]
-text=1300
-value=12
-
-[pico_ChB_offset]
-text="0,00"
-value=0
-
-[HWP_stepper_step]
-text="0,00"
-value=0
-
-[normFrameCheck]
-text=Frame
-checked=false
-
-[pico_AutoRange]
-text=Auto Level:
-checked=true
-
-[raw_data_preview]
-text=preview
-checked=true
-
-[scan3D_threshold_rel]
-text=1300
-value=0.5
-
-[autoDownsampleCheck]
-text=Auto
-checked=true
-
-[HWP_move_to_angle]
-text="0,0000"
-value=0
-
-[calibr_wavelength_step]
-text=1300
-value=1
-
-[confParam_scan_step]
-text="0,100"
-value=0.1
-
-[n_meas_laser_spectra_Z_step]
-text=1300
-value=0.2
-
-[scan1D_start]
-text=1300
-value=0
-
-[HWP_stepper_wait]
-text=WaitUntilReady
-checked=true
-
-[Pi_X_On]
-text=X
-checked=true
-
-[n_meas_laser_spectra_step]
-text=5
-value=5
-
-[andorCameraExposure]
-text="0,10000"
-value=0.1
-
-[pico_pretrig]
-text=0.0
-
-[calibr_step]
-text=1300
-value=1
-
-[pico_photon_counter]
-text=PC
-checked=false
-
-[n_meas_laser_spectra_Z_offset]
-text="-0,10"
-value=-0.1
-
-[pico_samplingDuration]
-text=100e-6
-
-[n_meas_laser_spectra_track]
-text=track
-checked=true
-
-[laserWavelength_ready]
-text=ready
-checked=true
-
-[pm100Live]
-text=Live
-checked=false
-
-[confParam_scan_end]
-text=1300
-value=50
-
-[normTBlurSpin]
-text="0,00"
-value=0
-
 [meas_laser_spectra_start]
-text=1300
+text=850
 value=850
-
-[pico_photon_counter_threshold]
-text=-0.01
-
-[scan1D_end]
-text="50,00"
-value=50
-
-[calibr_start]
-text="0,00"
-value=0
-
-[n_meas_laser_spectra_Z_interface]
-text=1300
-value=25.9328
-
-[usbSpectr_to]
-text=1300
-value=1600
-
-[normROICheck]
-text=ROI
-checked=false
-
-[HWP_stepper_MoveTo]
-text="0,00"
-value=0
-
-[Pi_Z_move_to]
-text=1300
-value=25
 
 [meas_laser_spectra_step]
 text=1
 value=1
 
-[fastScan_time_cutoff]
-text="0,0000000000"
-value=0
+[meas_laser_spectra_track]
+checked=false
+text=trac&k
+
+[meas_laser_spectra_track_channel]
+currentIndex=0
 
 [meas_laser_spectra_track_fast]
-text=Fast
 checked=false
+text=Fast
+
+[minText]
+text=27.054
+
+[mocoMoveAbs_target]
+text=100000
+value=100000
+
+[mocoPosition]
+text=100000
+value=100000
+
+[mocoSection]
+currentIndex=1
+
+[mouseCheck]
+checked=true
+text=Mouse Enabled
+
+[n_meas_laser_spectra_MOCO_PMT]
+checked=false
+text=MOCO_PMT
 
 [n_meas_laser_spectra_Z_end]
-text=1300
+text="50,00"
 value=50
 
-[pico_TrigThreshold]
-text=1300
-value=0.02
-
-[shamrockWavelength_to_set]
-text=1300
-value=355
-
-[laserShutter]
-text=Shutter
-checked=false
-
-[usbSpectr_integr_time]
-text="0,010"
-value=0.01
-
-[n_meas_laser_spectra_start]
-text=1300
-value=950
-
-[shamrockWavelength]
-text=355.0
-
-[pico_AutoRange_max]
-text=1300
-value=-20000
-
-[scan3D_num_peaks]
-text=1300
-value=2
-
-[HWP_rel_step]
-text="5,00"
-value=5
-
-[pico_n_captures]
-text=1
-value=1
-
-[Pi_wait]
-text=Wait
-checked=true
-
-[laserPower_internal]
+[n_meas_laser_spectra_Z_interface]
 text="0,00"
-value=0
-
-[andorCameraLive]
-text=Live
-checked=false
-
-[pico_ChA_offset]
-text="0,00"
-value=0
-
-[calibr_wavelength_end]
-text=1300
-value=1300
-
-[Pi_Z_On]
-text=Z
-checked=true
-
-[n_meas_laser_spectra_track_fast]
-text=Fast
-checked=false
-
-[laserWavelength_to_set]
-text=1300
-value=1064
+value=25.9328
 
 [n_meas_laser_spectra_Z_interface_fit]
-text=fit
 checked=true
+text=f&it
 
 [n_meas_laser_spectra_Z_interface_optim]
-text=Z optim.
 checked=true
+text=&Z optim.
+
+[n_meas_laser_spectra_Z_offset]
+text="-0,10"
+value=-0.1
+
+[n_meas_laser_spectra_Z_start]
+text="0,00"
+value=5
+
+[n_meas_laser_spectra_Z_step]
+text="0,20"
+value=0.2
+
+[n_meas_laser_spectra_end]
+text=1064
+value=1064
+
+[n_meas_laser_spectra_grid]
+checked=false
+text=gridScan
 
 [n_meas_laser_spectra_grid_x]
 text=1
 value=1
 
-[n_meas_laser_spectra_grid]
-text=gridScan
-checked=false
-
 [n_meas_laser_spectra_grid_y]
 text=1
 value=1
 
-[mocoMoveAbs_target]
-text=0
+[n_meas_laser_spectra_start]
+text=950
+value=950
+
+[n_meas_laser_spectra_step]
+text=5
+value=5
+
+[n_meas_laser_spectra_track]
+checked=true
+text=tra&ck
+
+[n_meas_laser_spectra_track_channel]
+currentIndex=0
+
+[n_meas_laser_spectra_track_fast]
+checked=false
+text=F&ast
+
+[normFrameCheck]
+checked=false
+text=Frame
+
+[normROICheck]
+checked=false
+text=ROI
+
+[normTBlurSpin]
+text="0,00"
 value=0
+
+[normTimeRangeCheck]
+checked=false
+text=Time range
+
+[normXBlurSpin]
+text="0,00"
+value=0
+
+[normYBlurSpin]
+text="0,00"
+value=0
+
+[pico_AutoRange]
+checked=false
+text=A&uto Level:
+
+[pico_AutoRange_max]
+text="0,00"
+value=-20007
+
+[pico_AutoRange_min]
+text="0,00"
+value=-200
+
+[pico_ChA_VRange]
+currentIndex=4
+
+[pico_ChA_offset]
+text="0,00"
+value=0
+
+[pico_ChB_VRange]
+currentIndex=4
+
+[pico_ChB_offset]
+text="0,00"
+value=0
+
+[pico_TrigSource]
+currentIndex=2
+
+[pico_TrigThreshold]
+text="0,00"
+value=-0.42
+
+[pico_Trig_mode]
+currentIndex=0
+
+[pico_n_captures]
+text="0,00"
+value=10
+
+[pico_photon_counter]
+checked=false
+text=&PC
+
+[pico_photon_counter_threshold]
+text=-0.01
+
+[pico_pretrig]
+text=4e-4
+
+[pico_sampleInterval]
+text=1e-6
+
+[pico_samplingDuration]
+text=7e-3
+
+[pm100Average]
+text="0,00"
+value=100
+
+[pm100Live]
+checked=false
+text=Live
+
+[qt_spinbox_lineedit]
+text="0,00"
+
+[raw_data_preview]
+checked=true
+text=pre&view
+
+[readoutSources]
+currentIndex=0
+
+[rotPiezoStage_Step]
+text="10,00"
+value=10
+
+[rotPiezoStage_wait]
+checked=false
+text=WaitUntilReady
+
+[scan1D_axis]
+currentIndex=4
+
+[scan1D_end]
+text="360,00"
+value=360
+
+[scan1D_filePath]
+text=./data/scan1D
+
+[scan1D_start]
+text="0,00"
+value=0
+
+[scan1D_step]
+text="2,000"
+value=2
+
+[scan3D_num_peaks]
+text=2
+value=2
+
+[scan3D_path]
+text=./data/scan
+
+[scan3D_threshold_rel]
+text="0,00"
+value=0.5
+
+[scanPolar_angle]
+text="360,00"
+value=360
+
+[shamrockGrating]
+currentIndex=0
+
+[shamrockPort]
+currentIndex=0
+
+[shamrockWavelength]
+text=355.0
+
+[shamrockWavelengthShift]
+text="0,00"
+value=0
+
+[shamrockWavelength_to_set]
+text="0,00"
+value=355
+
+[shamrock_MOCO_limit]
+text="0,00"
+value=320
+
+[shamrock_use_MOCO]
+checked=false
+text=&ChangeFilterAt
 
 [spinBox]
-text=1300
-value=0
-
-[mocoPosition]
 text=0
 value=0
+
+[start3DScan_center]
+checked=true
+text=&center
+
+[usbSpectr_from]
+text="0,00"
+value=1400
+
+[usbSpectr_integr_time]
+text="0,010"
+value=0.01
+
+[usbSpectr_save_from]
+text="0,00"
+value=0
+
+[usbSpectr_save_to]
+text=3648
+value=3648
+
+[usbSpectr_to]
+text="0,00"
+value=1600
+
+[visibleOnlyCheck]
+checked=false
+text=Visible Data Only
+
+[xGridCheck]
+checked=false
+text=Show X Grid
+
+[yGridCheck]
+checked=false
+text=Show Y Grid
