--- a/gui.ini
+++ b/gui.ini
@@ -1,10 +1,9 @@
 [General]
-HWP_stepper_angle=-9.977578475336323
 text=255
 value=255
 
 [DAQmx_shift]
-text="0,00"
+text=-20000
 value=12
 
 [HWP_move_to_angle]
@@ -12,23 +11,23 @@ text="0,0000"
 value=0
 
 [HWP_rel_step]
-text="0,00"
+text="5,00"
 value=5
 
 [HWP_stepper_MoveTo]
-text="0,00"
-value=0
+text=-20000
+value=10
 
 [HWP_stepper_step]
-text="0,00"
-value=10
+text=-20000
+value=0
 
 [HWP_stepper_wait]
 checked=true
-text=&WaitUntilReady
+text=WaitUntilReady
 
 [Pi_Velocity]
-text="0,00"
+text=-20000
 value=10000
 
 [Pi_X_On]
@@ -36,7 +35,7 @@ checked=true
 text=&X
 
 [Pi_X_move_to]
-text="50,000"
+text=-20000
 value=50
 
 [Pi_Y_On]
@@ -52,24 +51,24 @@ checked=true
 text=&Z
 
 [Pi_Z_move_to]
-text="0,00"
-value=25
+text=-20000
+value=50
 
 [Pi_wait]
 checked=true
 text=&Wait
 
 [Scan3D_min_distance]
-text=2
-value=2
+text=1
+value=1
 
 [andorCameraExposure]
-text="0,00"
-value=0.1
+text="1,00000"
+value=1
 
 [andorCameraLive]
 checked=false
-text=&Live
+text=L&ive
 
 [andorCameraReadoutMode]
 currentIndex=0
@@ -95,11 +94,11 @@ checked=true
 text=Auto
 
 [calibr_end]
-text="0,00"
+text="360,00"
 value=360
 
 [calibr_start]
-text="0,00"
+text=-20000
 value=0
 
 [calibr_step]
@@ -107,15 +106,15 @@ text="1,000"
 value=1
 
 [calibr_wavelength_end]
-text="0,00"
+text=1300
 value=1300
 
 [calibr_wavelength_start]
-text="0,00"
+text=-20000
 value=850
 
 [calibr_wavelength_step]
-text="0,00"
+text=1
 value=1
 
 [clipToViewCheck]
@@ -123,7 +122,7 @@ checked=false
 text=Clip to View
 
 [confParam_scan_end]
-text="50,00"
+text=-20000
 value=50
 
 [confParam_scan_start]
@@ -131,7 +130,7 @@ text="0,00"
 value=0
 
 [confParam_scan_step]
-text="0,100"
+text=-20000
 value=0.1
 
 [downsampleCheck]
@@ -139,22 +138,22 @@ checked=false
 text=Downsample
 
 [downsampleSpin]
-text="0,00"
+text=1x
 value=1
 
 [fastScan_pattern]
 currentIndex=0
 
 [fastScan_time_calibr]
-text="2,0000000000"
-value=2
+text="1,0000000000"
+value=1
 
 [fastScan_time_cutoff]
-text="0,00"
+text="0,0000000000"
 value=0
 
 [fastScan_time_delay]
-text="0,00"
+text="0,0000000000"
 value=0
 
 [fftCheck]
@@ -175,7 +174,7 @@ value=0
 
 [laserShutter]
 checked=true
-text=S&hutter
+text=Shutter
 
 [laserWavelength]
 text=1064
@@ -183,11 +182,11 @@ value=1064
 
 [laserWavelength_ready]
 checked=false
-text=read&y
+text=ready
 
 [laserWavelength_to_set]
-text="0,00"
-value=1064
+text=-20000
+value=680
 
 [linkCombo]
 currentIndex=0
@@ -201,7 +200,7 @@ checked=false
 text=Log Y
 
 [maxText]
-text=1
+text=0.048749
 
 [maxTracesCheck]
 checked=false
@@ -216,16 +215,16 @@ text=1300
 value=1300
 
 [meas_laser_spectra_start]
-text=850
+text=-20000
 value=850
 
 [meas_laser_spectra_step]
-text=1
+text=-20000
 value=1
 
 [meas_laser_spectra_track]
 checked=false
-text=trac&k
+text=track
 
 [meas_laser_spectra_track_channel]
 currentIndex=0
@@ -235,18 +234,18 @@ checked=false
 text=Fast
 
 [minText]
-text=27.054
+text=0
 
 [mocoMoveAbs_target]
-text=100000
-value=100000
+text=0
+value=0
 
 [mocoPosition]
-text=100000
-value=100000
+text=0
+value=0
 
 [mocoSection]
-currentIndex=1
+currentIndex=0
 
 [mouseCheck]
 checked=true
@@ -257,67 +256,55 @@ checked=false
 text=MOCO_PMT
 
 [n_meas_laser_spectra_Z_end]
-text="50,00"
-value=50
+text=-20000
+value=1
 
 [n_meas_laser_spectra_Z_interface]
-text="0,00"
-value=25.9328
+text=-20000
+value=0
 
 [n_meas_laser_spectra_Z_interface_fit]
 checked=true
-text=f&it
+text=fit
 
 [n_meas_laser_spectra_Z_interface_optim]
 checked=true
-text=&Z optim.
+text=optimZ
 
 [n_meas_laser_spectra_Z_offset]
-text="-0,10"
-value=-0.1
+text=-20000
+value=0
 
 [n_meas_laser_spectra_Z_start]
 text="0,00"
-value=5
+value=0
 
 [n_meas_laser_spectra_Z_step]
-text="0,20"
-value=0.2
+text="0,30"
+value=0.3
 
 [n_meas_laser_spectra_end]
-text=1064
-value=1064
-
-[n_meas_laser_spectra_grid]
-checked=false
-text=gridScan
-
-[n_meas_laser_spectra_grid_x]
-text=1
-value=1
-
-[n_meas_laser_spectra_grid_y]
-text=1
-value=1
+text=1300
+value=1300
 
 [n_meas_laser_spectra_start]
-text=950
-value=950
+text=-20000
+value=850
 
 [n_meas_laser_spectra_step]
-text=5
-value=5
+text=1
+value=1
 
 [n_meas_laser_spectra_track]
 checked=true
-text=tra&ck
+text=track
 
 [n_meas_laser_spectra_track_channel]
 currentIndex=0
 
 [n_meas_laser_spectra_track_fast]
 checked=false
-text=F&ast
+text=Fast
 
 [normFrameCheck]
 checked=false
@@ -328,7 +315,7 @@ checked=false
 text=ROI
 
 [normTBlurSpin]
-text="0,00"
+text=-20000
 value=0
 
 [normTimeRangeCheck]
@@ -340,19 +327,19 @@ text="0,00"
 value=0
 
 [normYBlurSpin]
-text="0,00"
+text=-20000
 value=0
 
 [pico_AutoRange]
 checked=false
-text=A&uto Level:
+text=Auto Le&vel:
 
 [pico_AutoRange_max]
-text="0,00"
-value=-20007
+text=-20000
+value=-20000
 
 [pico_AutoRange_min]
-text="0,00"
+text=-200
 value=-200
 
 [pico_ChA_VRange]
@@ -373,34 +360,34 @@ value=0
 currentIndex=2
 
 [pico_TrigThreshold]
-text="0,00"
-value=-0.42
+text="-0,330"
+value=-0.33
 
 [pico_Trig_mode]
 currentIndex=0
 
 [pico_n_captures]
-text="0,00"
-value=10
+text=2
+value=2
 
 [pico_photon_counter]
 checked=false
-text=&PC
+text=PC
 
 [pico_photon_counter_threshold]
-text=-0.01
+text=-0.001
 
 [pico_pretrig]
-text=4e-4
+text=0.0004
 
 [pico_sampleInterval]
-text=1e-6
+text=0.000001
 
 [pico_samplingDuration]
-text=7e-3
+text=0.007
 
 [pm100Average]
-text="0,00"
+text=100
 value=100
 
 [pm100Live]
@@ -408,17 +395,17 @@ checked=false
 text=Live
 
 [qt_spinbox_lineedit]
-text="0,00"
+text=-20000
 
 [raw_data_preview]
 checked=true
-text=pre&view
+text=&preview
 
 [readoutSources]
 currentIndex=0
 
 [rotPiezoStage_Step]
-text="10,00"
+text=-20000
 value=10
 
 [rotPiezoStage_wait]
@@ -426,36 +413,52 @@ checked=false
 text=WaitUntilReady
 
 [scan1D_axis]
-currentIndex=4
+currentIndex=0
 
 [scan1D_end]
-text="360,00"
-value=360
+text=-20000
+value=100
 
 [scan1D_filePath]
 text=./data/scan1D
 
 [scan1D_start]
-text="0,00"
+text=-20000
 value=0
 
 [scan1D_step]
-text="2,000"
-value=2
+text="1,000"
+value=1
 
-[scan3D_num_peaks]
+[scan3D_byMask]
+checked=true
+text=mas&kScan
+
+[scan3D_maskSigma]
+text="1,00"
+value=1
+
+[scan3D_maskStep]
 text=2
 value=2
+
+[scan3D_maskThreshold]
+text="10,000"
+value=10
+
+[scan3D_num_peaks]
+text=1
+value=1
 
 [scan3D_path]
 text=./data/scan
 
 [scan3D_threshold_rel]
-text="0,00"
+text="0,50"
 value=0.5
 
 [scanPolar_angle]
-text="360,00"
+text=-20000
 value=360
 
 [shamrockGrating]
@@ -465,34 +468,30 @@ currentIndex=0
 currentIndex=0
 
 [shamrockWavelength]
-text=355.0
+text=
 
 [shamrockWavelengthShift]
 text="0,00"
 value=0
 
 [shamrockWavelength_to_set]
-text="0,00"
-value=355
+text="532,00"
+value=532
 
 [shamrock_MOCO_limit]
-text="0,00"
+text="320,00"
 value=320
 
 [shamrock_use_MOCO]
 checked=false
-text=&ChangeFilterAt
+text=C&hangeFilterAt
 
 [spinBox]
-text=0
+text=-20000
 value=0
 
-[start3DScan_center]
-checked=true
-text=&center
-
 [usbSpectr_from]
-text="0,00"
+text=-20000
 value=1400
 
 [usbSpectr_integr_time]
@@ -500,7 +499,7 @@ text="0,010"
 value=0.01
 
 [usbSpectr_save_from]
-text="0,00"
+text=-20000
 value=0
 
 [usbSpectr_save_to]
@@ -508,7 +507,7 @@ text=3648
 value=3648
 
 [usbSpectr_to]
-text="0,00"
+text=1600
 value=1600
 
 [visibleOnlyCheck]
