--- a/gui.ini
+++ b/gui.ini
@@ -1,281 +1,434 @@
 [General]
-text=255
-value=255
+text=0
+value=0
+HWP_stepper_angle=358
 
-[DAQmx_shift]
-text=-20000
-value=12
-
-[HWP_move_to_angle]
-text="0,0000"
+[spinBox]
+text=0
 value=0
 
-[HWP_rel_step]
-text="5,00"
-value=5
-
-[HWP_stepper_MoveTo]
-text=-20000
-value=10
-
-[HWP_stepper_step]
-text=-20000
-value=0
-
-[HWP_stepper_wait]
-checked=true
-text=WaitUntilReady
-
-[Pi_Velocity]
-text=-20000
-value=10000
+[minText]
+text=0
 
 [Pi_X_On]
+text=X
 checked=true
-text=&X
 
-[Pi_X_move_to]
-text=-20000
-value=50
-
-[Pi_Y_On]
-checked=true
-text=&Y
-
-[Pi_Y_move_to]
-text="50,000"
-value=50
-
-[Pi_Z_On]
-checked=true
-text=&Z
-
-[Pi_Z_move_to]
-text=-20000
-value=50
-
-[Pi_wait]
-checked=true
-text=&Wait
-
-[Scan3D_min_distance]
-text=1
-value=1
-
-[andorCameraExposure]
-text="1,00000"
-value=1
-
-[andorCameraLive]
-checked=false
-text=L&ive
-
-[andorCameraReadoutMode]
-currentIndex=0
-
-[autoAlphaCheck]
-checked=false
-text=Auto
-
-[autoDownsampleCheck]
-checked=true
-text=Auto
+[maxText]
+text=0.081136
 
 [autoPanCheck]
-checked=false
 text=Auto Pan Only
+checked=false
+
+[qt_spinbox_lineedit]
+text="0,100"
+
+[mouseCheck]
+text=Mouse Enabled
+checked=true
+
+[autoPointsCheck]
+text=Auto
+checked=true
+
+[autoDownsampleCheck]
+text=Auto
+checked=true
 
 [autoPercentSpin]
 text=100%
 value=100
 
-[autoPointsCheck]
-checked=true
-text=Auto
+[downsampleCheck]
+text=Downsample
+checked=false
 
-[calibr_end]
-text="360,00"
-value=360
+[invertCheck]
+text=Invert Axis
+checked=false
+
+[visibleOnlyCheck]
+text=Visible Data Only
+checked=false
+
+[normFrameCheck]
+text=Frame
+checked=false
+
+[forgetTracesCheck]
+text=Forget hidden traces
+checked=false
+
+[usbSpectr_save_to]
+text="2,68"
+value=3648
+
+[logXCheck]
+text=Log X
+checked=false
+
+[normTimeRangeCheck]
+text=Time range
+checked=false
+
+[mocoPosition]
+text=1450078
+value=1450078
+
+[n_meas_laser_spectra_Z_interface_optim]
+text=optimZ
+checked=true
+
+[fftCheck]
+text=Power Spectrum (FFT)
+checked=false
+
+[pico_AutoRange_max]
+text=-20000
+value=-20000
+
+[linkCombo]
+currentIndex=0
+
+[pm100Live]
+text=Live
+checked=false
+
+[xGridCheck]
+text=Show X Grid
+checked=false
 
 [calibr_start]
-text=-20000
-value=0
-
-[calibr_step]
-text="1,000"
-value=1
-
-[calibr_wavelength_end]
-text=1300
-value=1300
-
-[calibr_wavelength_start]
-text=-20000
-value=850
-
-[calibr_wavelength_step]
-text=1
-value=1
-
-[clipToViewCheck]
-checked=false
-text=Clip to View
-
-[confParam_scan_end]
-text=-20000
-value=50
-
-[confParam_scan_start]
 text="0,00"
 value=0
 
-[confParam_scan_step]
-text=-20000
-value=0.1
+[pico_ChA_VRange]
+currentIndex=2
 
-[downsampleCheck]
+[scan3D_num_peaks]
+text=4
+value=4
+
+[n_meas_laser_spectra_Z_offset]
+text="-0,10"
+value=-0.1
+
+[meas_laser_spectra_start]
+text=850
+value=850
+
+[pico_sampleInterval]
+text=2e-9
+
+[HWP_stepper_wait]
+text=WaitUntilReady
+checked=true
+
+[n_meas_laser_spectra_Z_start]
+text="15,00"
+value=15
+
+[scan3D_byMask]
+text=maskScan
 checked=false
-text=Downsample
+
+[HWP_move_to_angle]
+text="10,0000"
+value=10
+
+[autoAlphaCheck]
+text=Auto
+checked=false
+
+[shamrockPort]
+currentIndex=0
+
+[yGridCheck]
+text=Show Y Grid
+checked=false
 
 [downsampleSpin]
 text=1x
 value=1
 
-[fastScan_pattern]
-currentIndex=0
+[confParam_scan_end]
+text="50,00"
+value=50
 
-[fastScan_time_calibr]
-text="1,0000000000"
-value=1
+[usbSpectr_to]
+text="2,68"
+value=1600
 
 [fastScan_time_cutoff]
 text="0,0000000000"
 value=0
 
-[fastScan_time_delay]
-text="0,0000000000"
-value=0
-
-[fftCheck]
-checked=false
-text=Power Spectrum (FFT)
-
-[forgetTracesCheck]
-checked=false
-text=Forget hidden traces
-
-[invertCheck]
-checked=false
-text=Invert Axis
-
-[laserPower_internal]
-text="0,00"
-value=0
+[pico_TrigThreshold]
+text="0,100"
+value=0.1
 
 [laserShutter]
-checked=true
 text=Shutter
-
-[laserWavelength]
-text=1064
-value=1064
-
-[laserWavelength_ready]
 checked=false
-text=ready
 
-[laserWavelength_to_set]
-text=-20000
-value=680
+[scan1D_end]
+text="360,00"
+value=360
 
-[linkCombo]
-currentIndex=0
+[scan3D_maskStep]
+text=2
+value=2
 
-[logXCheck]
-checked=false
-text=Log X
+[calibr_step]
+text="1,000"
+value=1
 
-[logYCheck]
-checked=false
-text=Log Y
+[shamrockWavelength_to_set]
+text="260,00"
+value=260
 
-[maxText]
-text=0.048749
+[scan1D_axis]
+currentIndex=4
 
-[maxTracesCheck]
-checked=false
-text=Max Traces:
+[pico_samplingDuration]
+text=60e-6
 
 [maxTracesSpin]
 text=0
 value=0
 
-[meas_laser_spectra_end]
-text=1300
-value=1300
+[n_meas_laser_spectra_Z_interface_fit]
+text=fit
+checked=true
 
-[meas_laser_spectra_start]
-text=-20000
-value=850
-
-[meas_laser_spectra_step]
-text=-20000
-value=1
-
-[meas_laser_spectra_track]
-checked=false
-text=track
-
-[meas_laser_spectra_track_channel]
+[shamrockGrating]
 currentIndex=0
 
-[meas_laser_spectra_track_fast]
+[maxTracesCheck]
+text=Max Traces:
 checked=false
-text=Fast
 
-[minText]
-text=0
+[pm100Average]
+text=100
+value=100
 
-[mocoMoveAbs_target]
-text=0
+[shamrock_MOCO_limit]
+text="200,00"
+value=200
+
+[clipToViewCheck]
+text=Clip to View
+checked=false
+
+[n_meas_laser_spectra_track]
+text=track
+checked=true
+
+[usbSpectr_save_from]
+text="2,68"
 value=0
 
-[mocoPosition]
-text=0
+[DAQmx_shift]
+text=12
+value=12
+
+[n_meas_laser_spectra_end]
+text=1200
+value=1200
+
+[scan3D_maskThreshold]
+text="60,000"
+value=60
+
+[Pi_Velocity]
+text="10000,00"
+value=10000
+
+[calibr_wavelength_step]
+text=1
+value=1
+
+[n_meas_laser_spectra_track_channel]
+currentIndex=1
+
+[confParam_scan_step]
+text="0,100"
+value=0.1
+
+[normYBlurSpin]
+text="0,00"
+value=0
+
+[andorCameraLive]
+text=Live
+checked=false
+
+[rotPiezoStage_wait]
+text=WaitUntilReady
+checked=false
+
+[rotPiezoStage_Step]
+text="2,68"
+value=10
+
+[Scan3D_min_distance]
+text=1
+value=1
+
+[logYCheck]
+text=Log Y
+checked=false
+
+[Pi_Z_move_to]
+text="15,000"
+value=15
+
+[meas_laser_spectra_track_fast]
+text=Fast
+checked=false
+
+[normROICheck]
+text=ROI
+checked=false
+
+[normTBlurSpin]
+text="2,68"
+value=0
+
+[pico_Trig_mode]
+currentIndex=0
+
+[readoutSources]
+currentIndex=0
+
+[n_meas_laser_spectra_Z_interface]
+text="33,2184"
+value=33.2184
+
+[pico_photon_counter]
+text=PC
+checked=false
+
+[shamrock_use_MOCO]
+text=ChangeFilterAt
+checked=false
+
+[laserWavelength_ready]
+text=ready
+checked=true
+
+[calibr_wavelength_start]
+text=850
+value=850
+
+[Pi_Z_On]
+text=Z
+checked=true
+
+[fastScan_time_calibr]
+text="1,0000000000"
+value=1
+
+[normXBlurSpin]
+text="0,00"
+value=0
+
+[meas_laser_spectra_step]
+text=1
+value=1
+
+[calibr_end]
+text="360,00"
+value=360
+
+[scan1D_step]
+text="2,000"
+value=2
+
+[scan1D_filePath]
+text=D:/microV/data/May2218/ZnO20nmEth/scan1D-np3-polar
+
+[Pi_wait]
+text=Wait
+checked=true
+
+[usbSpectr_from]
+text="2,68"
+value=1400
+
+[scan3D_path]
+text=./data/scan
+
+[shamrockWavelength]
+text=491.66668701171875
+
+[pico_n_captures]
+text=1
+value=1
+
+[scan3D_maskSigma]
+text="6,00"
+value=6
+
+[scan3D_threshold_rel]
+text="0,10"
+value=0.1
+
+[pico_AutoRange_min]
+text=-200
+value=-200
+
+[pico_ChB_offset]
+text="0,00"
+value=0
+
+[meas_laser_spectra_track]
+text=track
+checked=false
+
+[fastScan_time_delay]
+text="0,0000000000"
+value=0
+
+[n_meas_laser_spectra_step]
+text=5
+value=5
+
+[scan1D_start]
+text="0,00"
+value=0
+
+[laserWavelength]
+text=1064
+value=1064
+
+[HWP_rel_step]
+text="1,00"
+value=1
+
+[shamrockWavelengthShift]
+text="0,00"
 value=0
 
 [mocoSection]
+currentIndex=3
+
+[Pi_Y_On]
+text=Y
+checked=true
+
+[pico_TrigSource]
 currentIndex=0
 
-[mouseCheck]
-checked=true
-text=Mouse Enabled
+[pico_photon_counter_threshold]
+text=-0.001
 
-[n_meas_laser_spectra_MOCO_PMT]
-checked=false
-text=MOCO_PMT
+[scanPolar_angle]
+text="360,00"
+value=360
 
-[n_meas_laser_spectra_Z_end]
-text=-20000
-value=1
-
-[n_meas_laser_spectra_Z_interface]
-text=-20000
-value=0
-
-[n_meas_laser_spectra_Z_interface_fit]
-checked=true
-text=fit
-
-[n_meas_laser_spectra_Z_interface_optim]
-checked=true
-text=optimZ
-
-[n_meas_laser_spectra_Z_offset]
-text=-20000
-value=0
-
-[n_meas_laser_spectra_Z_start]
+[confParam_scan_start]
 text="0,00"
 value=0
 
@@ -283,241 +436,89 @@ value=0
 text="0,30"
 value=0.3
 
-[n_meas_laser_spectra_end]
-text=1300
-value=1300
-
 [n_meas_laser_spectra_start]
-text=-20000
-value=850
+text=950
+value=950
 
-[n_meas_laser_spectra_step]
-text=1
-value=1
-
-[n_meas_laser_spectra_track]
-checked=true
-text=track
-
-[n_meas_laser_spectra_track_channel]
-currentIndex=0
-
-[n_meas_laser_spectra_track_fast]
-checked=false
-text=Fast
-
-[normFrameCheck]
-checked=false
-text=Frame
-
-[normROICheck]
-checked=false
-text=ROI
-
-[normTBlurSpin]
-text=-20000
-value=0
-
-[normTimeRangeCheck]
-checked=false
-text=Time range
-
-[normXBlurSpin]
+[HWP_stepper_step]
 text="0,00"
-value=0
-
-[normYBlurSpin]
-text=-20000
 value=0
 
 [pico_AutoRange]
-checked=false
-text=Auto Le&vel:
+text=Auto Level:
+checked=true
 
-[pico_AutoRange_max]
-text=-20000
-value=-20000
+[calibr_wavelength_end]
+text=1300
+value=1300
 
-[pico_AutoRange_min]
-text=-200
-value=-200
+[andorCameraExposure]
+text="1,00000"
+value=1
 
-[pico_ChA_VRange]
-currentIndex=4
-
-[pico_ChA_offset]
-text="0,00"
+[mocoMoveAbs_target]
+text=0
 value=0
+
+[meas_laser_spectra_track_channel]
+currentIndex=0
+
+[n_meas_laser_spectra_MOCO_PMT]
+text=MOCO_PMT
+checked=true
+
+[fastScan_pattern]
+currentIndex=0
+
+[laserWavelength_to_set]
+text=1064
+value=1064
+
+[n_meas_laser_spectra_track_fast]
+text=Fast
+checked=false
 
 [pico_ChB_VRange]
 currentIndex=4
 
-[pico_ChB_offset]
-text="0,00"
-value=0
+[Pi_Y_move_to]
+text="50,000"
+value=50
 
-[pico_TrigSource]
-currentIndex=2
+[HWP_stepper_MoveTo]
+text="10,00"
+value=10
 
-[pico_TrigThreshold]
-text="-0,330"
-value=-0.33
-
-[pico_Trig_mode]
-currentIndex=0
-
-[pico_n_captures]
-text=2
-value=2
-
-[pico_photon_counter]
-checked=false
-text=PC
-
-[pico_photon_counter_threshold]
-text=-0.001
+[n_meas_laser_spectra_Z_end]
+text="45,00"
+value=45
 
 [pico_pretrig]
-text=0.0004
+text=0.0
 
-[pico_sampleInterval]
-text=0.000001
-
-[pico_samplingDuration]
-text=0.007
-
-[pm100Average]
-text=100
-value=100
-
-[pm100Live]
-checked=false
-text=Live
-
-[qt_spinbox_lineedit]
-text=-20000
-
-[raw_data_preview]
-checked=true
-text=&preview
-
-[readoutSources]
-currentIndex=0
-
-[rotPiezoStage_Step]
-text=-20000
-value=10
-
-[rotPiezoStage_wait]
-checked=false
-text=WaitUntilReady
-
-[scan1D_axis]
-currentIndex=0
-
-[scan1D_end]
-text=-20000
-value=100
-
-[scan1D_filePath]
-text=./data/scan1D
-
-[scan1D_start]
-text=-20000
-value=0
-
-[scan1D_step]
-text="1,000"
-value=1
-
-[scan3D_byMask]
-checked=true
-text=mas&kScan
-
-[scan3D_maskSigma]
-text="1,00"
-value=1
-
-[scan3D_maskStep]
-text=2
-value=2
-
-[scan3D_maskThreshold]
-text="10,000"
-value=10
-
-[scan3D_num_peaks]
-text=1
-value=1
-
-[scan3D_path]
-text=./data/scan
-
-[scan3D_threshold_rel]
-text="0,50"
-value=0.5
-
-[scanPolar_angle]
-text=-20000
-value=360
-
-[shamrockGrating]
-currentIndex=0
-
-[shamrockPort]
-currentIndex=0
-
-[shamrockWavelength]
-text=
-
-[shamrockWavelengthShift]
-text="0,00"
-value=0
-
-[shamrockWavelength_to_set]
-text="532,00"
-value=532
-
-[shamrock_MOCO_limit]
-text="320,00"
-value=320
-
-[shamrock_use_MOCO]
-checked=false
-text=C&hangeFilterAt
-
-[spinBox]
-text=-20000
-value=0
-
-[usbSpectr_from]
-text=-20000
-value=1400
+[Pi_X_move_to]
+text="50,000"
+value=50
 
 [usbSpectr_integr_time]
 text="0,010"
 value=0.01
 
-[usbSpectr_save_from]
-text=-20000
+[meas_laser_spectra_end]
+text=1300
+value=1300
+
+[raw_data_preview]
+text=preview
+checked=false
+
+[pico_ChA_offset]
+text="0,00"
 value=0
 
-[usbSpectr_save_to]
-text=3648
-value=3648
+[laserPower_internal]
+text="0,01"
+value=0.01
 
-[usbSpectr_to]
-text=1600
-value=1600
-
-[visibleOnlyCheck]
-checked=false
-text=Visible Data Only
-
-[xGridCheck]
-checked=false
-text=Show X Grid
-
-[yGridCheck]
-checked=false
-text=Show Y Grid
+[andorCameraReadoutMode]
+currentIndex=0
